# Galilee

./: .gitignore  CMakeLists.txt  README.md
Scripts/: Win-GenerateProject.bat
src/: main.cpp
